--- a/css/main.css
+++ b/css/main.css
@@ -21,9 +21,6 @@ body {
   margin: 0;
   background-color: #fef1f7;
 }
-header {
-  background-color: #ffe85a;
-}
 
 h1 {
   color: white;
@@ -31,6 +28,8 @@ h1 {
   text-align: center;
   margin: 0;
   text-shadow: 2px 2px 5px black;
+  background-color: #ffe85a;
+  padding: .5em;
 }
 
 nav ul {
@@ -105,6 +104,7 @@ div.body-about {
   margin: 1em;
   box-shadow: 2px 2px 5px grey;
   text-align: center;
+  background-color: white;
 }
 
 .about h2 {
@@ -192,6 +192,7 @@ ul.prod-list {
   list-style-type: none;
   padding: 1em;
   text-align: center;
+  background-color: white;
 }
 
 li.prod-btn {
