--- a/css/main.css
+++ b/css/main.css
@@ -114,7 +114,7 @@ nav li:hover {
 section.about {
   width: 90%;
   margin: 0 auto;
-    box-shadow: 2px 2px 5px grey;
+  box-shadow: 2px 2px 5px grey;
 }
 
 div.body-about {
@@ -154,6 +154,18 @@ div.body-about {
   background-color: white;
   color: black;
   transition: background-color .35s, color .35s;
+}
+
+section.learn {
+  width: 90%;
+  margin: 0 auto;
+  padding: 1em;
+  box-shadow: 2px 2px 5px grey;
+}
+
+.learn h2 {
+  font-size: 2.5rem;
+  margin: 0;
 }
 
 ul.people {
@@ -200,6 +212,8 @@ div.card-body {
   margin: 0;
   padding-left: 10px;
   padding-bottom: 1rem;
+  font-family: 'Playfair Display', serif;
+  color: #f473b3;
 }
 
 section.products {
@@ -245,12 +259,7 @@ img.prod {
   transition: opacity .35s;
 }
 
-section.learn {
-  width: 90%;
-  margin: 0 auto;
-  padding: 1em;
-  box-shadow: 2px 2px 5px grey;
-}
+
 
 section.location {
   width: 90%;
@@ -260,6 +269,7 @@ section.location {
 
 .location-info {
   padding: 1em;
+  margin: 1em;
 }
 
 .location h2 {
