--- a/css/main.css
+++ b/css/main.css
@@ -78,18 +78,20 @@ nav li:hover {
 }
 
 .banner {
-  position: relative;
   background-color: white;
 }
 
 .banner-content {
   text-align: left;
-  position: absolute;
-  bottom: 0;
   width: 100%;
-  background-color: rgba(244, 115, 179, 0.5);
+  background-color: #f473b3;
   padding: 1em;
+  cursor: pointer;
+}
 
+.banner-content:hover {
+  opacity: .5;
+  transition: opacity .30s;
 }
 
 .banner-content h2 {
@@ -366,6 +368,11 @@ img.sm-icon {
   float: left;
   width: 40px;
   margin: .3em;
+}
+
+img.sm-icon:hover {
+  opacity: .5;
+  transition: opacity .35s;
 }
 
 ol.btm-nav {
