--- a/css/main.css
+++ b/css/main.css
@@ -356,6 +356,10 @@ img.star {
   display: block;
 }
 
+.two strong {
+  font-size: 2.5rem;
+}
+
 footer {
   background-color: #f473b3;
   text-align: center;
