--- a/css/main.css
+++ b/css/main.css
@@ -450,3 +450,11 @@ footer small {
     line-height: 1.3;
   }
 }
+
+@media only screen and (min-width: 38em) {
+
+  html {
+    font-size: 110%;
+    line-height: 1.4;
+  }
+}
