--- a/css/main.css
+++ b/css/main.css
@@ -333,8 +333,8 @@ section.location {
 ul.review-card {
   list-style-type: none;
   padding: 0;
-  max-width: 375px;
   margin: 0 auto;
+  display: inline-block;
   }
 
 .review-card li {
@@ -487,4 +487,51 @@ footer small {
   .banner-content {
     position: absolute;
     bottom: 0;
+  }
+
+  ul.people {
+    text-align: center;
+  }
+
+  li.card-one {
+    max-width: 15em;
+    display: inline-block;
+    margin: 0;
+  }
+}
+
+@media only screen and (min-width: 60em) {
+
+  nav li {
+    width: 16.5%;
+  }
+
+  ul.people {
+    text-align: center;
+  }
+
+  li.card-one {
+    max-width: 15em;
+    margin: 0;
+    display: inline-block;
+  }
+
+.location-fig figcaption {
+  display: inline-block;
+}
+.location-fig {
+  display: inline-block;
+}
+
+  .location img-fig {
+    display: inline-block;
+  }
+
+  img.img-store {
+    max-width: 45%;
+    display: inline-block;
+  }
+  .location-info p {
+    max-width: 45%;
+    display: inline-block;
   }
