--- a/css/main.css
+++ b/css/main.css
@@ -64,12 +64,14 @@ ul.nav {
   cursor: pointer;
   display: inline-block;
   width: 40px;
+  float: left;
+  margin-left: 1.5em;
+  margin-top: 1em;
 }
 
 .nav-label img {
   display: block;
   width: 100%;
-  float: left;
 }
 
 .nav-check {
