--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@ body {
 
 header {
   background-color: #f473b3;
-  padding: 1em 0;
+  padding: 0;
   text-align: center;
 }
 
@@ -41,7 +41,8 @@ h1 {
   font-size: 2.8em;
   text-align: center;
   margin: 0;
-  padding-bottom: .8em;
+  padding-bottom: .5em;
+  padding-top: .3em;
   text-shadow: 2px 2px 5px black;
   display: inline-block;
 }
@@ -66,7 +67,7 @@ ul.nav {
   width: 40px;
   float: left;
   margin-left: 1.5em;
-  margin-top: 1em;
+  margin-top: 1.7em;
 }
 
 .nav-label img {
@@ -82,7 +83,7 @@ ul.nav {
 nav li {
   display: inline-block;
   float: left;
-  width: 49.5%;
+  width: 49.8%;
   margin-top: 1px;
   margin-left: 1px;
   background-color: #01a2be;
@@ -292,6 +293,15 @@ section.location {
   box-shadow: 2px 2px 5px grey;
 }
 
+div.location-text {
+  display: inline-block;
+  max-width: 25em;
+  padding: 2em;
+  text-align: left;
+  vertical-align: middle;
+
+}
+
 .location-info {
   padding: 1em;
   margin: 1em;
@@ -308,11 +318,9 @@ section.location {
 }
 
 .img-store {
+  display: inline-block;
+  max-width: 25em;
   width: 100%;
-}
-
-.location-fig {
-  margin: 0;
 }
 
 .store h2 {
