--- a/css/main.css
+++ b/css/main.css
@@ -486,6 +486,7 @@ footer small {
     float: left;
     width: 80px;
     margin: 1em;
+    margin-top: 2em;
   }
 
   img.float-right {
@@ -493,6 +494,7 @@ footer small {
     float: right;
     width: 80px;
     margin: 1em;
+    margin-top: 2em;
   }
 
   .banner {
