--- a/css/main.css
+++ b/css/main.css
@@ -38,7 +38,7 @@ img.float-right {
 
 h1 {
   color: white;
-  font-size: 2.8em;
+  font-size: 2.5em;
   text-align: center;
   margin: 0;
   padding-bottom: .5em;
@@ -65,9 +65,9 @@ ul.nav {
   cursor: pointer;
   display: inline-block;
   width: 40px;
-  float: left;
-  margin-left: 1.5em;
-  margin-top: 1.7em;
+  position: absolute;
+  top: 1.3em;
+  left: .5em;
 }
 
 .nav-label img {
@@ -345,7 +345,7 @@ section.reviews {
   width: 95%;
   margin: 0 auto;
   box-shadow: 2px 2px 5px grey;
-  text-align: center;
+  tex
 }
 
 ul.review-card {
@@ -486,7 +486,6 @@ footer small {
     float: left;
     width: 80px;
     margin: 1em;
-    margin-top: 2em;
   }
 
   img.float-right {
@@ -494,7 +493,6 @@ footer small {
     float: right;
     width: 80px;
     margin: 1em;
-    margin-top: 2em;
   }
 
   .banner {
