--- a/css/main.css
+++ b/css/main.css
@@ -352,14 +352,15 @@ ul.review-card {
   list-style-type: none;
   padding: 0;
   margin: 0 auto;
-  }
+  text-align: center;
+}
 
 li.one {
   border: 1px solid grey;
   background-color: white;
   box-shadow: 2px 2px 5px grey;
-  margin: 1em;
-  max-width: 310px;
+  margin: .5em;
+  max-width: 300px;
   display: inline-block;
 }
 
@@ -497,7 +498,6 @@ footer small {
 
   .banner {
     position: relative;
-
   }
 
   .banner-content {
@@ -510,14 +510,19 @@ footer small {
   }
 
   li.card-one {
-    max-width: 15em;
+    max-width: 80%;
     display: inline-block;
     margin: .5em;
   }
 
-  li.prod-btn {
-    width: 15%;
-  }
+  .card-body p {
+  text-align: left;
+
 }
 
 @media only screen and (min-width: 60em) {
+
+  html {
+    font-size: 120%;
+    line-height: 1.5;
+  }
