--- a/css/main.css
+++ b/css/main.css
@@ -577,12 +577,23 @@ footer small {
     font-size: 130%;
   }
 
-  nav.li {
+  h1 {
+    font-size: 4em;
+  }
+
+  nav a {
     font-size: 1.5em;
   }
 
+  .banner-content {
+    max-height: 270px;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+  }
+
   .banner-content h2 {
-    font-size: 5em;
+    font-size: 4em;
   }
 
   .banner-content p {
@@ -593,7 +604,7 @@ footer small {
     font-size: 2.5em;
   }
 
-  nav a {
+  li.one {
     max-width: 320px;
   }
   }
