--- a/css/main.css
+++ b/css/main.css
@@ -96,6 +96,10 @@ nav a {
   color: white;
 }
 
+nav a:hover {
+  color: #01a2be;
+}
+
 nav li:hover {
   background-color: #ffe85a;
   color: #01a2be;
@@ -117,7 +121,7 @@ nav li:hover {
 
 .banner-content:hover {
   opacity: .5;
-  transition: opacity .30s;
+  transition: opacity .3s;
 }
 
 .banner-content h2 {
